# sep-data

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/socket-client/: README.md  main.rs
scripts/: generate_output_data.py
src/: client.rs  lib.rs
src/parser/: capture_tests.rs  mod.rs
src/se_types/: mod.rs  output_data.rs  types.rs
