[package]
name = "sep-data"
version = "0.1.0"
authors = ["Peter Eliasson <warackta@gmail.com>"]
edition = "2018"
description = "Library for receiving Smart Eye Pro (SEP) output data via TCP/UDP."
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
